--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <!-- Copyright End -->
 
         <!-- Whatsaap -->
-        <a class="wa_btn" href="https://wa.me//6281572782134/">
+        <a class="wa_btn" href="https://wa.me///">
             <i class="fa-brands fa-whatsapp fa-2x"></i>
         </a>
         
